fix issue where preview container is too large with vertical video

--- a/web-ui/src/components/lecture/preview/preview.less
+++ b/web-ui/src/components/lecture/preview/preview.less
@@ -7,6 +7,17 @@
   }
 }
 
+.img_container {
+  min-height: 100px;
+  max-height: 300px;
+  overflow-y: hidden;
+  width: 100%;
+
+  div {
+    width: 100%;
+  }
+}
+
 .compact {
   width: 100%;
   margin-left: 10px;
